--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -25,8 +25,8 @@
     <string name="tags_admin_menu">Etiquetes</string>
     <string name="title_new_post">Nova Publicació</string>
     <string name="description_new_post">Descripció</string>
-    <string name="link_new_post">Enllaç</string>
-    <string name="tags_new_post">Etiquetes</string>
+    <string name="link_new_post">Arxiu PDF</string>
+    <string name="tags_new_post">Cicles</string>
     <string name="asix_new_post">ASIX</string>
     <string name="smix__new_post">SMIX</string>
     <string name="publish_new_post">Publicar</string>
